// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# design ## getDesign ### should transform plain json object 1`] = `
Array [
  "master_tube_database_sink_responder",
  "_4TMKAAeZEemswplt4kY5KA",
  "master_cell_database_sink",
  "master_cell_responder",
  "MasterTube",
  "master_cell_gateway_sink",
  "master_tube_responder_gateway_sink",
  "_qTSEIAeaEemswplt4kY5KA",
  "MasterCell",
  "_U9zJwAeZEemswplt4kY5KA",
  "_ZP0_oAeZEemswplt4kY5KA",
  "_eSAgEAeZEemswplt4kY5KA",
  "Cell",
  "_A5e08AebEemswplt4kY5KA",
  "_zAb28AeZEemswplt4kY5KA",
  "Tube",
  "_JBlPYgeZEemswplt4kY5KA",
  "master_cell_gateway_source",
  "master_cell_record_data",
  "master_tube_record_data_database_sink",
  "master_tube_register_post",
  "MasterDesign",
  "_a-8M0AeZEemswplt4kY5KA",
  "_PoggEAeZEemswplt4kY5KA",
  "_JAGBoAeZEemswplt4kY5KA",
  "Layer",
  "_PFZL8AeZEemswplt4kY5KA",
  "Flow",
]
`;

exports[`# design ## getDesign ### should transform plain json object 2`] = `
Array [
  "clazz",
  "count",
  "external",
  "name",
  "input",
  "output",
  "_id",
  "Tube",
  "MasterCell",
  "Flow",
]
`;

exports[`# design ## getDesign ### should transform plain json object 3`] = `
Array [
  "clazz",
  "name",
  "cell",
  "tube",
  "_id",
]
`;
